5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_1805.log
== TEST (2019-03-26 23:42:37) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=(xb-xa)/2
ya=float(input("ya: "))
yb=float(input("ya: "))
ym=(yb-ya)/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
-12.5
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:43:39) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=(xb-xa)/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=(yb-ya)/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
-12.5
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:43:45) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=(xb-xa)/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=(yb-ya)/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
-12.5
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:46:05) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=xb-xa/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=yb-ya/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
0.0
33.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:46:51) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=xb-xa/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=yb-ya/2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.304179
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
0.0
33.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
1.8
-0.7
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.7
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:47:10) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=xb+xa/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=yb+ya/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
50.0
63.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:51:43) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=xb+xa/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=yb+ya/2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.127776
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
50.0
63.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
4.2
4.3
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.9
6.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:53:50) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))
xm=yb+xa/2
ya=float(input("ya: "))
yb=float(input("yb: "))
ym=xb+ya/2

print(round(xm,1))
print(round(ym,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    xm=yb+xa/2
NameError: name 'yb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:54:24) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))

ya=float(input("ya: "))
yb=float(input("yb: "))
ym=xb+ya/2
xm=yb+xa/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
73.0
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:54:40) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))

ya=float(input("ya: "))
yb=float(input("yb: "))
ym=xb+ya/2
xm=yb+xa/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
73.0
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:55:17) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))

ya=float(input("ya: "))
yb=float(input("yb: "))
ym=xa+ya/2
xm=yb+xb/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
60.5
65.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:55:36) 
-- CODE:
xa=float(input("xa: "))
xb=float(input("xb: "))

ya=float(input("ya: "))
yb=float(input("yb: "))
ym=xa+ya/2
xm=yb+xb/2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.190383
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
60.5
65.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.3
5.0
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
5.7
2.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:57:57) 
-- CODE:
xa=float(input("xa: "))
ya=float(input("ya: "))

xb=float(input("xb: "))
yb=float(input("yb: "))
ym=xb+xa/2
xm=yb+ya/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
60.5
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:58:13) 
-- CODE:
xa=float(input("xa: "))
ya=float(input("ya: "))

xb=float(input("xb: "))
yb=float(input("yb: "))
ym=xb+xa/2
xm=yb+ya/2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.189834
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
60.5
55.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.3
6.2
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
5.7
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:59:26) 
-- CODE:
xa=float(input("xa: "))
ya=float(input("ya: "))

xb=float(input("xb: "))
yb=float(input("yb: "))
xm=xb+xa/2
ym=yb+ya/2

print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
55.0
60.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:16) 
-- CODE:
xa=float(input("xa: "))
ya=float(input("ya: "))

xb=float(input("xb: "))
yb=float(input("yb: "))



print(round(xb+xa/2,1))
print(round(yb+ya/2,1))
-- EXECUTION TIME:
0.154299
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
55.0
60.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
6.2
3.3
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
5.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:52) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))



print(round(x2+x1/2,1))
print(round(y2+y1/2,1))
-- EXECUTION TIME:
0.188932
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
55.0
60.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
6.2
3.3
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
5.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:02:21) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))



print(round(x2+x1/2,1))
print(round(y2+y1/2,1))
-- OUTPUT:
55.0
60.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:05:05) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))



print(round(x2+x1/2,1))
print(round(y2+y1/2,1))
-- EXECUTION TIME:
0.170615
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
55.0
60.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
6.2
3.3
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
5.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:06:20) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))



print(round((x2+x1)/2,1))
print(round((y2+y1)/2,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:06:31) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))



print(round((x2+x1)/2,1))
print(round((y2+y1)/2,1))
-- EXECUTION TIME:
0.249738
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:22:08) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))



print(round((x2+x1)/2,1))
print(round((y2+y1)/2,1))
-- EXECUTION TIME:
0.189731
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
